# EdgeGuard

./: .gitignore  LICENSE  README.md
docs/: Architecture.md  Requirements.md  milestone.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/components/camera_service/: CMakeLists.txt  camera_service.c
firmware/components/camera_service/include/: camera_service.h
firmware/components/event_manager/: CMakeLists.txt  event_manager.c
firmware/components/inference_engine/: CMakeLists.txt  inference_engine.c  model_data.h  model_runner.cpp  model_runner.h  preprocess.c  preprocess.h
firmware/components/inference_engine/include/: inference_engine.h
firmware/components/led_alert/: CMakeLists.txt  led_alert.c
firmware/components/mqtt_service/: CMakeLists.txt  mqtt_service.c
firmware/components/network_manager/: CMakeLists.txt  network_manager.c
firmware/components/storage/: CMakeLists.txt  storage.c
firmware/components/web_server/: CMakeLists.txt  web_server.c
firmware/main/: CMakeLists.txt  app_config.h  app_state.c  app_state.h  idf_component.yml  main.c
hardware/: bill_of_materials.md
ml/colab/imageNet2/: MobileNetV2.ipynb  edgeguard_person_classifier_int8.tflite
ml/colab/smallCustomClassifier/: edgeguard_small_person_classifier.keras  edgeguard_small_person_classifier_export.keras  edgeguard_small_person_classifier_float.tflite  edgeguard_small_person_classifier_int8.tflite  edgeguard_threshold.json
tools/: capture_dataset.py  create_firmware_tree.py  tflite_to_header.py
(+6 files in other folders)
