idf_component_register(
    SRCS
        "inference_engine.c"
        "model_runner.cpp"
        "preprocess.c"
    INCLUDE_DIRS
        "include"
        "."
    PRIV_INCLUDE_DIRS
        "../../main"
    REQUIRES
        log
        freertos
        esp_timer
        camera_service
        event_manager
        espressif__esp-tflite-micro
)